--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.2.0",
+    "helmet": "^4.3.1",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.3"
   },
