Adds Auth0 functionality
- Adds code to communicate with Auth0 API to customize the sign up and log in
pages.

*** dotenv ***
- Adds example environment variables for Auth0 keys and domain.

--- a/config/secrets.env.example
+++ b/config/secrets.env.example
@@ -2,5 +2,10 @@ MONGO_URI=mongodb+srv://<user>:<password>@<database>?retryWrites=true&w=majority
 DB_NAME=database-name
 ARTICLES=article-collection
 AUTHORS=author-collection
+USERS=users-collection
 COMMENTS=comments-collection
 PORT=9000
+REACT_APP_AUTH0_DOMAIN=<auth0-domain>
+REACT_APP_AUTH0_CLIENT_ID=<auth0-client-id>
+REACT_APP_AUTH0_CLIENT_SECRET=<auth0-client-secret>
+MGMT_API_ACCESS_TOKEN=<auth0-management-access-token> (ref: https://auth0.com/docs/tokens/management-api-access-tokens/get-management-api-access-tokens-for-testing)
