--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "server": "nodemon --exec babel-node src/server.js",
     "server-chrome": "open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
     "db-setup": "npm run db-setup:articles && npm run db-setup:comments",
@@ -18,20 +19,31 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.3.1",
+    "express-rate-limit": "^5.2.5",
+    "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^1.25.0",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.4",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0",
+    "passport-jwt": "^4.0.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.5",
-    "eslint": "^7.10.0",
+    "@babel/core": "^7.12.13",
+    "@babel/node": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "nodemon": "^2.0.4",
+    "eslint-config-prettier": "^7.2.0",
+    "nodemon": "^2.0.7",
     "open-cli": "^6.0.1"
   }
 }
