--- a/config/secrets.env.example
+++ b/config/secrets.env.example
@@ -1,11 +1,15 @@
-MONGO_URI=mongodb+srv://<user>:<password>@<database>?retryWrites=true&w=majority
-DB_NAME=database-name
-ARTICLES=article-collection
-AUTHORS=author-collection
-USERS=users-collection
-COMMENTS=comments-collection
+MONGO_URI=<mongodb+srv://<user>:<password>@<database>?retryWrites=true&w=majority>
+DB_NAME=<database-name>
+ARTICLES=<article-collection>
+AUTHORS=<author-collection>
+USERS=<users-collection>
+COMMENTS=<comments-collection>
 PORT=9000
-REACT_APP_AUTH0_DOMAIN=<auth0-domain>
+COOKIE_SESSION_KEY=<cookie-session-key>
+JWT_SECRET_KEY=<jwt-secret-key>
+CLIENT_ORIGIN_URL=<client-website-url>
+AUTH0_AUDIENCE=<auth0-api-identifer>
+AUTH0_DOMAIN=<auth0-server-domain>
 REACT_APP_AUTH0_CLIENT_ID=<auth0-client-id>
 REACT_APP_AUTH0_CLIENT_SECRET=<auth0-client-secret>
 MGMT_API_ACCESS_TOKEN=<auth0-management-access-token> (ref: https://auth0.com/docs/tokens/management-api-access-tokens/get-management-api-access-tokens-for-testing)
