--- a/package.json
+++ b/package.json
@@ -19,21 +19,18 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "express-rate-limit": "^5.2.5",
-    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.12.2",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.4",
-    "passport": "^0.4.1",
-    "passport-auth0": "^1.4.0",
-    "passport-jwt": "^4.0.0",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
