Updates the server secrets.env.example file to reflect the current state

--- a/config/secrets.env.example
+++ b/config/secrets.env.example
@@ -5,11 +5,7 @@ AUTHORS=<author-collection>
 USERS=<users-collection>
 COMMENTS=<comments-collection>
 PORT=9000
-COOKIE_SESSION_KEY=<cookie-session-key>
-JWT_SECRET_KEY=<jwt-secret-key>
-CLIENT_ORIGIN_URL=<client-website-url>
 AUTH0_AUDIENCE=<auth0-api-identifer>
 AUTH0_DOMAIN=<auth0-server-domain>
-REACT_APP_AUTH0_CLIENT_ID=<auth0-client-id>
-REACT_APP_AUTH0_CLIENT_SECRET=<auth0-client-secret>
+JWT_SIGNATURE_ALGORITHM=<jwt-signature-algorithm>
 MGMT_API_ACCESS_TOKEN=<auth0-management-access-token> (ref: https://auth0.com/docs/tokens/management-api-access-tokens/get-management-api-access-tokens-for-testing)
