Adds NODE_ENV to npm scripts
- Adds additional script to run server in development mode:
    - npm run server:dev
- Run server in production mode:
    - npm run server
- Only loads environment variables using dotenv if not in production
mode.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "server": "nodemon --exec babel-node src/server.js",
+    "server": "set NODE_ENV=production&& nodemon --exec babel-node src/server.js",
+    "server:dev": "set NODE_ENV=development&& nodemon --exec babel-node src/server.js",
     "server-chrome": "open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
     "db-setup": "npm run db-setup:articles && npm run db-setup:comments",
     "db-setup:articles": "babel-node db-setup/addArticlesToDB.js",
