--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,3 @@
-# LinkedIn Learning files
-~LL*files
-
 # Temporary files
 temp/
 
@@ -92,7 +89,6 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
-build
 
 # Gatsby files
 .cache/
@@ -130,3 +126,20 @@ server/*.gitignore
 
 # Confidential data
 secrets.env
+
+# Docker
+Dockerfile
+.dockerignore
+
+# Git
+.git
+.gitignore
+
+# README
+README.md
+
+# Database setup
+db-setup
+
+# ESLint
+.eslintrc.js
