Adds React SPA homepage to the Express Server API
- Implements a simple homepage for the Server API for all endpoints
to display if a user navigates to the Server.
- /api endpoints still send the appropriate data to the client.

*** React App ***
- Adds React dependent npm modules/dependencies.
- All React dependencies installed as dev dependencies, since we
only need to create the React App during development.
- We bundle it using webpack then server the bundle.js as a static
file from the Express server.

*** /public ***
- Adds robots.txt for search engine crawlers.
- Updates index.html with additional metadata and loads the webpack
bundle which contains the React App.
- Adds Next Gen Limitless small logo.

*** Server ***
- Updates /public directory for production build.

*** Webpack ***
- Adds webpack config files based on the client.
- Refactors based on the Express Server.

*** Docker ***
- Updates Dockerfile so that the entire directory is copied to the
builder container so webpack has access to the webpack config files.

*** Babel & ESLint ***
- Updates .babelrc and .eslintrc.js to use React presets/plugins & settings.

*** Styles ***
- Adds CSS normalization and resetting from:
    - normalize.scss
    - reset.local.scss
- Adds base CSS from index.scss.
- Implements styled-components to style the React App.
- Default colors and color handlers found in styled-components/colors.js
- Uses separation of concerns for styled-components.
    - Main file is styled.js which imports:
        - app.js
        - general.js
        - logo.js

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,18 @@
 {
-  "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ]
+	"presets": [
+		[
+			"@babel/preset-env",
+			{
+				"targets": {
+					"node": "current"
+				}
+			}
+		],
+		"@babel/preset-react"
+	],
+	"plugins": [
+		"@babel/plugin-transform-runtime",
+		["babel-plugin-styled-components", { "displayName": true }],
+		"@babel/plugin-proposal-class-properties"
+	]
 }
