--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node dist/server.js",
     "server": "set NODE_ENV=production&& nodemon --exec babel-node src/server.js",
     "server:dev": "set NODE_ENV=development&& nodemon --exec babel-node src/server.js",
-    "server-chrome": "open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
+    "server-chrome": "set NODE_ENV=development&& open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
+    "react-dev-server": "webpack serve --config webpack.dev.js --open chrome",
+    "build:react-app:watch": "webpack --config webpack.prod.js --watch",
+    "build:react-app": "webpack --config webpack.prod.js",
     "db-setup": "npm run db-setup:articles && npm run db-setup:comments",
     "db-setup:articles": "babel-node db-setup/addArticlesToDB.js",
     "db-setup:comments": "babel-node db-setup/addCommentsToDB.js",
@@ -20,6 +23,7 @@
   "author": "Reuben Smith",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -39,11 +43,32 @@
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
+    "@hot-loader/react-dom": "^17.0.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "css-loader": "^5.1.1",
+    "dotenv-webpack": "^7.0.1",
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-react": "^7.22.0",
+    "file-loader": "^6.2.0",
     "nodemon": "^2.0.7",
-    "open-cli": "^6.0.1"
+    "open-cli": "^6.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
