Updates secrets.env.example to reflect current environment variables
- Adds information on what to do with the file if using Docker.

--- a/config/secrets.env.example
+++ b/config/secrets.env.example
@@ -1,3 +1,10 @@
+#
+# To ensure the app runs successfully in Docker,
+# you will need to ensure the secrets.env file is:
+#   - renamed to ".env"
+#   - moved to the root directory (only way docker-compose will import it)
+#
+
 MONGO_URI=<mongodb+srv://<user>:<password>@<database>?retryWrites=true&w=majority>
 DB_NAME=<database-name>
 ARTICLES=<article-collection>
@@ -5,6 +12,8 @@ AUTHORS=<author-collection>
 USERS=<users-collection>
 COMMENTS=<comments-collection>
 PORT=9000
+DEV_PORT=5000
+CLIENT_ORIGIN_URL=<client-origin-url>
 AUTH0_AUDIENCE=<auth0-api-identifer>
 AUTH0_DOMAIN=<auth0-server-domain>
 JWT_SIGNATURE_ALGORITHM=<jwt-signature-algorithm>
