Modifies webpack React App build and public/ directories
*** Webpack ***
- Updates webpack config files.
- Specific entry for development and production.
- Copies public/ directory to dist/
- Creates two bundles:
    - One for public/ (for development purposes)
    - One for dist/public (for final production static file serving)
- Makes separate alias' for webpack.dev and webpack.common.
- Removes unused alias'.

*** React App ***
- Does not import images, instead references the static url.
- This fixes images not showing during development testing as it was
referencing the wrong location.
- React dev server still serves static files as we configured it in
the webpack.dev config file.

*** Server ***
- Serves static files from public directory depending on
production or development.

*** Dockerfile ***
- Does not copy public/ directory as it is built into dist/

--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "server": "set NODE_ENV=production&& nodemon --exec babel-node src/server.js",
+    "server:prod-test": "set NODE_ENV=development&& nodemon --exec babel-node dist/server.js",
+    "server:prod": "set NODE_ENV=production&& nodemon --exec babel-node dist/server.js",
     "server:dev": "set NODE_ENV=development&& nodemon --exec babel-node src/server.js",
     "server-chrome": "set NODE_ENV=development&& open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
     "react-dev-server": "webpack serve --config webpack.dev.js --open chrome",
     "build:react-app:watch": "webpack --config webpack.prod.js --watch",
     "build:react-app": "webpack --config webpack.prod.js",
+    "build:src": "npm run clean && babel ./src --out-dir dist --ignore **/temp/*.js,**/dist/*.js,**/components/*.js,**/styles/**/*.js,**/index.js,**/customizeLogin.js,**/customizeSignup.js",
+    "build:config": "cp -r ./config ./temp && babel ./config --out-dir config",
+    "clean": "rm -rf ./dist && mkdir dist",
     "db-setup": "npm run db-setup:articles && npm run db-setup:comments",
     "db-setup:articles": "babel-node db-setup/addArticlesToDB.js",
     "db-setup:comments": "babel-node db-setup/addCommentsToDB.js",
     "customize:login": "babel-node src/auth/customizeLogin.js",
-    "customize:signup": "babel-node src/auth/customizeSignup.js",
-    "build:src": "npm run clean && babel ./src --out-dir dist --ignore **/temp/*.js,**/dist/*.js",
-    "build:config": "cp -r ./config ./temp && babel ./config --out-dir config",
-    "clean": "rm -rf ./dist && mkdir dist"
+    "customize:signup": "babel-node src/auth/customizeSignup.js"
   },
   "author": "Reuben Smith",
   "license": "ISC",
@@ -50,6 +51,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.1",
     "dotenv-webpack": "^7.0.1",
     "eslint": "^7.19.0",
