--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "server:dev": "set NODE_ENV=development&& nodemon --exec babel-node src/server.js",
     "server-chrome": "set NODE_ENV=development&& open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
     "react-dev-server": "webpack serve --config webpack.dev.js --open chrome",
+    "build:docker": "npm run build:src && npm run build:config && npm run build:react-app",
+    "build:prod": "npm run build:src && npm run build:react-app",
     "build:react-app:watch": "webpack --config webpack.prod.js --watch",
     "build:react-app": "webpack --config webpack.prod.js",
     "build:src": "npm run clean && babel ./src --out-dir dist --ignore **/temp/*.js,**/dist/*.js,**/components/*.js,**/styles/**/*.js,**/index.js,**/customizeLogin.js,**/customizeSignup.js",
