Implements automated emails via SMTP via the Contact Form in the Contact page
- Adds dependencies:
    - nodemailer
    - nodemailer-express-handlebars
- Adds email route.
- Adds POST request to endpoint: "/email/send/contact":
    - Server creates a Nodemailer transporter with the SMTP details
    of the admin email.
    - Uses Handlebars.js to send a formatted html page as an email, with
    the message details injected.
    - Sends an email to the company admin with the message details.
    - Checks if email send was successful.
    - If successful, also sends email to the user as confirmation the
    message was received.
- Updates secrets.env.example with SMTP config examples.

*** package.json ***
- Adds npm scripts to easily copy the email templates files to the dist/
directory.
- This will ensure Docker is able to access the files in the production
build.

*** Assets ***
- Adds src/templates to store email assets.
- Adds images used in emails.
- Adds contact-admin.hbs and contact-user.hbs.
    - Adds minified versions to send.

--- a/config/secrets.env.example
+++ b/config/secrets.env.example
@@ -18,3 +18,7 @@ AUTH0_AUDIENCE=<auth0-api-identifer>
 AUTH0_DOMAIN=<auth0-server-domain>
 JWT_SIGNATURE_ALGORITHM=<jwt-signature-algorithm>
 MGMT_API_ACCESS_TOKEN=<auth0-management-access-token> (ref: https://auth0.com/docs/tokens/management-api-access-tokens/get-management-api-access-tokens-for-testing)
+SMTP_HOST=<smtp-host>
+SMTP_PORT=<smtp-port>
+SMTP_USER_EMAIL=<user-email>
+SMTP_USER_PASSWORD=<user-password>
