--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "server:dev": "set NODE_ENV=development&& nodemon --exec babel-node src/server.js",
     "server-chrome": "set NODE_ENV=development&& open-cli http://localhost:9000 -- chrome && nodemon --exec babel-node src/server.js",
     "react-dev-server": "webpack serve --config webpack.dev.js --open chrome",
-    "build:docker": "npm run build:src && npm run build:config && npm run build:react-app",
-    "build:prod": "npm run build:src && npm run build:react-app",
+    "build:docker": "npm run build:src && npm run build:config && npm run copy:templates && npm run build:react-app",
+    "build:prod": "npm run build:src && npm run copy:templates && npm run build:react-app",
     "build:react-app:watch": "webpack --config webpack.prod.js --watch",
     "build:react-app": "webpack --config webpack.prod.js",
     "build:src": "npm run clean && babel ./src --out-dir dist --ignore **/temp/*.js,**/dist/*.js,**/components/*.js,**/styles/**/*.js,**/index.js,**/customizeLogin.js,**/customizeSignup.js",
     "build:config": "cp -r ./config ./temp && babel ./config --out-dir config",
+    "copy:templates": "cp -r ./src/templates ./dist/templates",
     "clean": "rm -rf ./dist && mkdir dist",
     "db-setup": "npm run db-setup:articles && npm run db-setup:comments",
     "db-setup:articles": "babel-node db-setup/addArticlesToDB.js",
@@ -40,6 +41,8 @@
     "jwks-rsa": "^1.12.2",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.4",
+    "nodemailer": "^6.5.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
