Modifies CORS to accept requests from www prefix
- Some browsers (such as Brave) do not allow the .htaccess to drop
the www prefix.
- This caused a CORS error as the URL did not match the origins
specified in the server.
- This adds additional client origin with the www prefix.
- Updates secrets.env.example with CLIENT_ORIGIN_URL_WWW example.

--- a/config/secrets.env.example
+++ b/config/secrets.env.example
@@ -14,6 +14,7 @@ COMMENTS=<comments-collection>
 PORT=9000
 DEV_PORT=5000
 CLIENT_ORIGIN_URL=<client-origin-url>
+CLIENT_ORIGIN_URL_WWW=<client-origin-url-with-www-prefix>
 AUTH0_AUDIENCE=<auth0-api-identifer>
 AUTH0_DOMAIN=<auth0-server-domain>
 JWT_SIGNATURE_ALGORITHM=<jwt-signature-algorithm>
